# pressure-regulator-panel

./: CMakeLists.txt  README.md  main.cpp
drivers/: .CMakeLists.txt.swp  CMakeLists.txt  comlinedevice.cpp  comlinedevice.h  externaldevice.h  idatalink.h  ipressureregulator.h  regtronic_driver.cpp  regtronic_driver.h
drivers/gtest/: CMakeLists.txt  mockdatalink.h  mockexternaldevice.h  mockipressureregulator.h  regtronicdriver_test.cpp
gtest/: CMakeLists.txt  main_test.cpp  sanitizer_blacklist.txt
gtest/gtest/: CMakeLists.txt
lib/: CMakeLists.txt  presentationmodel.cpp  presentationmodel.h
lib/gtest/: CMakeLists.txt  presentationmodel_test.cpp
peripheral/: CMakeLists.txt  comlinedevice.cpp  comlinedevice.h  idatalink.h  qstorage.h
peripheral/gtest/: CMakeLists.txt  mockdatalink.h  qstorage_test.cpp
ui/: CMakeLists.txt  isettingswidget.cpp  isettingswidget.h  networkaddressfield.cpp  networkaddressfield.h  networkaddressform.cpp  networkaddressform.h  pressurepanel.cpp  pressurepanel.h  settingsform.cpp  settingsform.h  settingstextfield.cpp  settingstextfield.h  settingswidget.cpp  settingswidget.h
ui/gtest/: CMakeLists.txt  isettingswidget_test.cpp  mocksettingswidget.h  networkaddressfield_test.cpp  networkaddressform_test.cpp  pressurepanel_test.cpp  settingsform_test.cpp  settingstextfield_test.cpp
